@@ -330,8 +330,7 @@ public class ASTConverter {
       RexNode offsetExpr = hiveSortLimit.getOffsetExpr();
       RexNode fetchExpr = hiveSortLimit.getFetchExpr();
       if (fetchExpr != null) {
-        Object offset = (offsetExpr == null) ?
-            new Integer(0) : ((RexLiteral) offsetExpr).getValue2();
+        Object offset = (offsetExpr == null) ? Integer.valueOf(0) : ((RexLiteral) offsetExpr).getValue2();
         Object fetch = ((RexLiteral) fetchExpr).getValue2();
         hiveAST.limit = ASTBuilder.limit(offset, fetch);
       }
